--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
+
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Amol-Shrivastava/Todo-App.git"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
